--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,42 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "type": "npm",
+            "script": "start",
+            "isBackground": true,
+            "presentation": {
+                "focus": true,
+                "panel": "dedicated"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": {
+                "owner": "typescript",
+                "source": "ts",
+                "applyTo": "closedDocuments",
+                "fileLocation": [
+                    "relative",
+                    "${cwd}"
+                ],
+                "pattern": "$tsc",
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": {
+                        "regexp": "(.*?)"
+                    },
+                    "endsPattern": {
+                        "regexp": "Compiled |Failed to compile."
+                    }
+                }
+            },
+            "options": {
+                // Note: The ./client directory
+                "cwd": "${workspaceFolder}/client"
+            },
+        },
+        {
             "label": "build",
             "command": "dotnet",
             "type": "process",
@@ -37,6 +73,7 @@
                 "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
-        }
+        },
+        
     ]
 }
