--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,7 @@
             "type": "coreclr",
             "request": "attach"
         },
+        // Based on: https://github.com/microsoft/vscode-recipes/tree/master/Angular-CLI
         {
             "name": "Launch ng serve & Chrome",
             "type": "chrome",
